[Github] Commits since latest release (#1115)
Close #993.

--- a/try.html
+++ b/try.html
@@ -572,9 +572,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/release/qubyte/rubidium/all.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium/all.svg</code></td>
   </tr>
-  <tr><th data-doc='githubDoc'> GitHub commits: </th>
+  <tr><th data-keywords='GitHub commit' data-doc='githubDoc'> GitHub commits: </th>
   <td><img src='/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub commit' data-doc='githubDoc'>Github commits (since latest release): </th>
+  <td><img src='/github/commits-since/SubtitleEdit/subtitleedit/latest.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/commits-since/SubtitleEdit/subtitleedit/latest.svg</code></td>
   </tr>
   <tr><th> Chef cookbook: </th>
   <td><img src='/cookbook/v/chef-sugar.svg' alt=''/></td>
