--- a/try.html
+++ b/try.html
@@ -1154,12 +1154,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </datalist>
   <input class='short' name='prefix' placeholder='prefix'/>
   <input class='short' name='suffix' placeholder='suffix'/>
-  <input class='short' name='data' placeholder='data=>subdata'/>
+  <input class='short' name='data' placeholder='$.data.subdata'/>
   <input class='short' name='url' placeholder='url'/>
   <button>Generate</button>
 </form>
 <p>
-<code>/&lt;TYPE&gt;/&lt;SUBJECT&gt;-&lt;COLOR&gt;-&lt;PREFIX&gt;-&lt;SUFFIX&gt;/&lt;DATA=&gt;SUBDATA&gt;/&lt;URL&gt;.svg</code>
+<code>/&lt;TYPE&gt;/&lt;SUBJECT&gt;-&lt;COLOR&gt;-&lt;PREFIX&gt;-&lt;SUFFIX&gt;/&lt;<a href="https://www.npmjs.com/package/jsonpath" target="_BLANK" title="JSONdata syntax">$.DATA.SUBDATA</a>&gt;/&lt;URL&gt;.svg</code>
 </p>
 <hr class='spacing'/>
 
