--- a/try.html
+++ b/try.html
@@ -912,6 +912,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues/detail/last-update/badges/shields/979.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues/detail/last-update/badges/shields/979.svg</code></td>
   </tr>
+  <tr><th data-doc='githubDoc'data-keywords='GitHub release date'> GitHub Release Date: </th>
+    <td><img src='/github/release-date/SubtitleEdit/subtitleedit.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/release-date/SubtitleEdit/subtitleedit.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub pullrequest detail check' data-doc='githubDoc'> GitHub pull request check state: </th>
     <td><img src='/github/status/s/pulls/badges/shields/1110.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/status/s/pulls/badges/shields/1110.svg</code></td>
