Added Wordpress theme support

--- a/try.html
+++ b/try.html
@@ -367,9 +367,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/hexpm/dt/plug.svg' alt=''/></td>
   <td><code>https://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
-  <tr><th> WordPress: </th>
+  <tr><th> WordPress plugin: </th>
   <td><img src='/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
+  </tr>
+  <tr><th> WordPress theme: </th>
+  <td><img src='/wordpress/theme/dt/hestia.svg' alt=''/></td>
+  <td><code>https://img.shields.io/wordpress/theme/dt/hestia.svg</code></td>
   </tr>
   <tr><th> SourceForge: </th>
   <td><img src='/sourceforge/dm/sevenzip.svg' alt=''/></td>
@@ -971,9 +975,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/bitbucket/pr-raw/osrf/gazebo.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/pr-raw/osrf/gazebo.svg</code></td>
   </tr>
-  <tr><th> WordPress rating: </th>
+  <tr><th> WordPress plugin rating: </th>
     <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
     <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
+  </tr>
+  <tr><th> WordPress theme rating: </th>
+    <td><img src='/wordpress/theme/r/hestia.svg' alt=''/></td>
+    <td><code>https://img.shields.io/wordpress/theme/r/hestia.svg</code></td>
   </tr>
   <tr><th> Codacy grade: </th>
     <td><img src='/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
