--- a/try.html
+++ b/try.html
@@ -259,6 +259,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/downloads/atom/atom/latest/total.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/total.svg</code></td>
   </tr>
+  <tr>
+    <th data-keywords='github' data-doc='githubDoc'> Github Pre-Releases: </th>
+    <td><img src='/github/downloads-pre/atom/atom/latest/total.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/downloads-pre/atom/atom/latest/total.svg</code></td>
+  </tr>
   <tr><th data-keywords='github' data-doc='githubDoc'> Github Releases (by Release): </th>
   <td><img src='/github/downloads/atom/atom/v0.190.0/total.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/v0.190.0/total.svg</code></td>
@@ -266,6 +271,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='github' data-doc='githubDoc'> Github Releases (by Asset): </th>
   <td><img src='/github/downloads/atom/atom/latest/atom-amd64.deb.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/atom-amd64.deb.svg</code></td>
+  </tr>
+  <tr>
+    <th data-keywords='github' data-doc='githubDoc'> Github Pre-Releases (by Asset): </th>
+    <td><img src='/github/downloads-pre/atom/atom/latest/atom-amd64.deb.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/downloads-pre/atom/atom/latest/atom-amd64.deb.svg</code></td>
   </tr>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='/npm/dw/localeval.svg' alt=''/></td>
