[ReadTheDocs] Add initial support

--- a/try.html
+++ b/try.html
@@ -248,6 +248,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/continuousphp/git-hub/doctrine/dbal/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/continuousphp/git-hub/doctrine/dbal/master.svg</code></td>
   </tr>
+  <tr><th data-keywords='documentation'>Read the Docs:</th>
+    <td><img src='/readthedocs/pip.svg' alt=''/></td>
+    <td><code>https://img.shields.io/readthedocs/pip.svg</code></td>
+  </tr>
+  <tr><th data-keywords='documentation'>Read the Docs (version):</th>
+    <td><img src='/readthedocs/pip/stable.svg' alt=''/></td>
+    <td><code>https://img.shields.io/readthedocs/pip/stable.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
