Added new badges to homepage

--- a/try.html
+++ b/try.html
@@ -955,6 +955,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/last-commit/google/skia/infra/config.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub top language' data-doc='githubDoc'> GitHub top language: </th>
+    <td><img src='/github/languages/top/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/languages/top/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub language count' data-doc='githubDoc'> GitHub language count: </th>
+    <td><img src='/github/languages/count/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/languages/count/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub byte code size' data-doc='githubDoc'> GitHub code size in bytes: </th>
+    <td><img src='/github/languages/bytes/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/languages/bytes/badges/shields.svg</code></td>
+  </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
