--- a/try.html
+++ b/try.html
@@ -1001,6 +1001,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/languages/code-size/badges/shields.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/languages/code-size/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub repo size' data-doc='githubDoc'> GitHub repo size in bytes: </th>
+    <td><img src='/github/repo-size/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/repo-size/badges/shields.svg</code></td>
+  </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
