exchange info link

--- a/try.html
+++ b/try.html
@@ -1363,7 +1363,7 @@ Here are a few other parameters you can use: (connecting several with "&" is pos
 </p>
 <table><tbody>
   <tr><td><code>?label=healthinesses</code></td><td>Override the default
-      left-hand-side text (<a href="https://www.w3schools.com/tags/ref_urlencode.asp">URL-Encoding</a> needed for spaces or special characters!)</td>
+      left-hand-side text (<a href="https://developer.mozilla.org/en-US/docs/Glossary/percent-encoding">URL-Encoding</a> needed for spaces or special characters!)</td>
   <tr><td><code>?logo=appveyor</code></td>
     <td>
       Insert one of the
