--- a/try.html
+++ b/try.html
@@ -1359,11 +1359,11 @@ The following styles are available (flat is the default as of Feb 1st 2015):
 </tbody></table>
 
 <p>
-Here are a few other parameters you can use:
+Here are a few other parameters you can use: (connecting several with "&" is possible)
 </p>
 <table><tbody>
   <tr><td><code>?label=healthinesses</code></td><td>Override the default
-      left-hand-side text</td>
+      left-hand-side text (<a href="https://developer.mozilla.org/en-US/docs/Glossary/percent-encoding">URL-Encoding</a> needed for spaces or special characters!)</td>
   <tr><td><code>?logo=appveyor</code></td>
     <td>
       Insert one of the
