Added new Eclipse badges to homepage

--- a/try.html
+++ b/try.html
@@ -477,6 +477,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/vscode-marketplace/d/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/d/ritwickdey.LiveServer.svg</code></td>
   </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/d/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/d/notepad4e.svg</code></td>
+  </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/dm/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/dm/notepad4e.svg</code></td>
+  </tr>
   <tr><th data-keywords='jetbrains plugin'> JetBrains plugins: </th>
     <td><img src='/jetbrains/plugin/d/1347-scala.svg' alt=''/></td>
     <td><code>https://img.shields.io/jetbrains/plugin/d/1347-scala.svg</code></td>
@@ -717,6 +725,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
     <td><img src='/vscode-marketplace/v/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/v/ritwickdey.LiveServer.svg</code></td>
+  </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/v/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/v/notepad4e.svg</code></td>
   </tr>
   <tr><th> Itunes App Store: </th>
     <td><img src='/itunes/v/803453959.svg' alt=''/></td>
@@ -1187,6 +1199,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
     <td><img src='/vscode-marketplace/r/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/r/ritwickdey.LiveServer.svg</code></td>
+  </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/favorited/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/favorited/notepad4e.svg</code></td>
   </tr>
 </tbody></table>
 
