--- a/try.html
+++ b/try.html
@@ -1396,7 +1396,7 @@ Tell your favorite badge service to use it! <br/>
 And tell us, we might be able to bring it to you anyway!
 </p>
 <p>
-<object data='/twitter/follow/espadrine.svg?style=social&label=Follow' alt='Follow @espadrine'></object>
+<object data='/twitter/follow/shields_io.svg?style=social&label=Follow' alt='Follow @shields_io'></object>
 <object data='/gratipay/Shields.svg?style=social&label=Donate&link=https://www.gratipay.com/Shields/' alt='Donate to us!'></object>
 <object data='/github/forks/badges/shields.svg?style=social&label=Fork' alt='Fork on GitHub'></object>
 <object data='/discord/308323056592486420.svg?style=social&label=Chat&link=https://discord.gg/HjJCwm5' alt='chat on Discord'></object>
