--- a/try.html
+++ b/try.html
@@ -1349,6 +1349,10 @@ The following styles are available (flat is the default as of Feb 1st 2015):
   <td><code>https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
   <tr>
+  <td><img src='/badge/style-for--the--badge-green.svg?style=for-the-badge' alt=''/></td>
+  <td><code>https://img.shields.io/badge/style-for--the--badge-green.svg?style=for-the-badge</code></td>
+  </tr>
+  <tr>
   <td><img src='/badge/style-social-green.svg?style=social' alt=''/></td>
   <td><code>https://img.shields.io/badge/style-social-green.svg?style=social</code></td>
   </tr>
