Support for Jenkins plugin version (#1158)
Add simple badge for Jenkins plugins: shows latest version published to Jenkins' repository (fetched from: https://updates.jenkins.io/update-center.actual.json).

Jenkins usually publishes plugin updates one to two times a day, so 4 hours is a reasonable timeout for this large payload.

Close #622

--- a/try.html
+++ b/try.html
@@ -738,6 +738,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/jitpack/v/jitpack/maven-simple.svg' alt=''/></td>
     <td><code>https://img.shields.io/jitpack/v/jitpack/maven-simple.svg</code></td>
   </tr>
+  <tr><th> Jenkins Plugins: </th>
+    <td><img src='/jenkins/plugin/v/blueocean.svg' alt=''/></td>
+    <td><code>https://img.shields.io/jenkins/plugin/v/blueocean.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
