[Coveralls] Bitbucket support + service tests (#1189)
Close #793

--- a/try.html
+++ b/try.html
@@ -168,13 +168,21 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/jenkins/c/https/jenkins.qa.ubuntu.com/view/Utopic/view/All/job/address-book-service-utopic-i386-ci.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/view/Utopic/view/All/job/address-book-service-utopic-i386-ci.svg</code></td>
   </tr>
-  <tr><th> Coveralls: </th>
-    <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
-    <td><code>https://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
+  <tr><th> Coveralls github: </th>
+    <td><img src='/coveralls/github/jekyll/jekyll.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/github/jekyll/jekyll.svg</code></td>
   </tr>
-  <tr><th> Coveralls branch: </th>
-    <td><img src='/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
-    <td><code>https://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
+  <tr><th> Coveralls github branch: </th>
+    <td><img src='/coveralls/github/jekyll/jekyll/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/github/jekyll/jekyll/master.svg</code></td>
+  </tr>
+  <tr><th> Coveralls bitbucket: </th>
+    <td><img src='/coveralls/bitbucket/pyKLIP/pyklip.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/bitbucket/pyKLIP/pyklip.svg</code></td>
+  </tr>
+  <tr><th> Coveralls bitbucket branch: </th>
+    <td><img src='/coveralls/bitbucket/pyKLIP/pyklip.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/bitbucket/pyKLIP/pyklip/master.svg</code></td>
   </tr>
   <tr><th> SonarQube Coverage: </th>
     <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg' alt=''/></td>
