--- a/try.html
+++ b/try.html
@@ -79,14 +79,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/travis/rust-lang/rust.svg" alt="" />
           </td>
-          <td><code>/travis/USER/REPO.svg</code></td>
+          <td><code>https://img.shields.io/travis/USER/REPO.svg</code></td>
         </tr>
         <tr>
           <th>Travis branch:</th>
           <td>
             <img src="/travis/rust-lang/rust/master.svg" alt="" />
           </td>
-          <td><code>/travis/USER/REPO/BRANCH.svg</code></td>
+          <td><code>https://img.shields.io/travis/USER/REPO/BRANCH.svg</code></td>
         </tr>
         <tr>
           <th>Wercker:</th>
@@ -112,7 +112,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
         <tr>
           <th data-keywords="teamcity">(full build status):</th>
           <td> </td>
-          <td><code>/teamcity/http/teamcity.jetbrains.com/e/bt345.svg</code></td>
+          <td><code>https://img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg</code></td>
         </tr>
         <tr>
           <th>AppVeyor:</th>
@@ -140,7 +140,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/appveyor/tests/NZSmartie/coap-net-iu0to/master.svg" alt="" />
           </td>
-          <td><code>/appveyor/tests/NZSmartie/coap-net-iu0to.svg</code></td>
+          <td><code>https://img.shields.io/appveyor/tests/NZSmartie/coap-net-iu0to.svg</code></td>
         </tr>
         <tr>
           <th>Codeship:</th>
@@ -189,7 +189,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg" alt="" />
           </td>
-          <td><code>/circleci/token/YOURTOKEN/project/github/RedSparr0w/node-csgo-parser/master.svg</code></td>
+          <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/github/RedSparr0w/node-csgo-parser/master.svg</code></td>
         </tr>
         <tr>
           <th data-doc="visualStudioTeamServices">Visual Studio Team services:</th>
@@ -266,7 +266,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/coveralls/bitbucket/pyKLIP/pyklip.svg" alt="" />
           </td>
-          <td><code>/coveralls/bitbucket/pyKLIP/pyklip/master.svg</code></td>
+          <td><code>https://img.shields.io/coveralls/bitbucket/pyKLIP/pyklip/master.svg</code></td>
         </tr>
         <tr>
           <th>SonarQube Coverage:</th>
@@ -336,7 +336,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/codecov/c/github/codecov/example-python.svg" alt="" />
           </td>
-          <td><code>/codecov/c/token/YOURTOKEN/github/codecov/example-python.svg</code></td>
+          <td><code>https://img.shields.io/codecov/c/token/YOURTOKEN/github/codecov/example-python.svg</code></td>
         </tr>
         <tr>
           <th>Coverity Scan:</th>
@@ -385,7 +385,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/dockbit/DockbitStatus/health.svg?token=TvavttxFHJ4qhnKstDxrvBXM" alt="" />
           </td>
-          <td><code>/dockbit/ORGANIZATION_NAME/PIPELINE_NAME.svg?token=PIPELINE_TOKEN</code></td>
+          <td><code>https://img.shields.io/dockbit/ORGANIZATION_NAME/PIPELINE_NAME.svg?token=PIPELINE_TOKEN</code></td>
         </tr>
         <tr>
           <th>continuousphp:</th>
@@ -1246,7 +1246,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/itunes/v/803453959.svg" alt="" />
           </td>
-          <td><code>/itunes/v/BUNDLE_ID.svg</code></td>
+          <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
         </tr>
         <tr>
           <th data-keywords="jitpack java maven">JitPack:</th>
@@ -1568,7 +1568,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/github/issues-pr-closed-raw/cdnjs/cdnjs.svg" alt="" />
           </td>
-          <td><code>/github/issues-pr-closed/cdnjs/cdnjs.svg</code></td>
+          <td><code>https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg</code></td>
         </tr>
         <tr>
           <th data-doc="githubDoc" data-keywords="GitHub issue label">GitHub issues by-label:</th>
@@ -1603,7 +1603,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/github/issues/detail/s/badges/shields/979.svg" alt="" />
           </td>
-          <td><code>/github/issues/detail/badges/shields/979.svg</code></td>
+          <td><code>https://img.shields.io/github/issues/detail/badges/shields/979.svg</code></td>
         </tr>
         <tr>
           <th data-doc="githubDoc" data-keywords="GitHub issue pullrequest detail">GitHub issue title:</th>
@@ -1715,14 +1715,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="/github/last-commit/google/skia.svg" alt="" />
           </td>
-          <td><code>/github/commits/google/skia/last.svg</code></td>
+          <td><code>https://img.shields.io/github/commits/google/skia/last.svg</code></td>
         </tr>
         <tr>
           <th data-doc="githubDoc" data-keywords="GitHub last latest commit">GitHub last commit (branch):</th>
           <td>
             <img src="/github/last-commit/google/skia/infra/config.svg" alt="" />
           </td>
-          <td><code>/github/commits/google/skia/infra/config/last.svg</code></td>
+          <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
         </tr>
         <tr>
           <th data-doc="githubDoc" data-keywords="GitHub top language">GitHub top language:</th>
@@ -2210,7 +2210,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
         <tr>
           <th>(long form):</th>
           <td> </td>
-          <td><code>/issuestats/i/long/github/expressjs/express.svg</code></td>
+          <td><code>https://img.shields.io/issuestats/i/long/github/expressjs/express.svg</code></td>
         </tr>
         <tr>
           <th>Issue Stats:</th>
@@ -2222,7 +2222,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
         <tr>
           <th>(long form):</th>
           <td> </td>
-          <td><code>/issuestats/p/long/github/expressjs/express.svg</code></td>
+          <td><code>https://img.shields.io/issuestats/p/long/github/expressjs/express.svg</code></td>
         </tr>
         <tr>
           <th>Libraries.io for releases:</th>
@@ -2250,7 +2250,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td>
             <img src="https://img.shields.io/sourcegraph/rrc//github.com/gorilla/mux.svg" alt="" />
           </td>
-          <td><code>/sourcegraph/rrc/github.com/gorilla/mux.svg</code></td>
+          <td><code>https://img.shields.io/sourcegraph/rrc/github.com/gorilla/mux.svg</code></td>
         </tr>
       </tbody>
     </table>
