Add JetBrains plugin version to the front page

--- a/try.html
+++ b/try.html
@@ -1262,6 +1262,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           </td>
           <td><code>https://img.shields.io/jenkins/plugin/v/blueocean.svg</code></td>
         </tr>
+        <tr>
+          <th>JetBrains Plugins:</th>
+          <td>
+            <img src="/jetbrains/plugin/v/9630-a8translate.svg" alt="" />
+          </td>
+          <td><code>https://img.shields.io/jetbrains/plugin/v/9630-a8translate.svg</code></td>
+        </tr>
       </tbody>
     </table>
   </div>
