Fix more badge links in the production build

--- a/try.html
+++ b/try.html
@@ -2302,15 +2302,15 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 
 <p class='badge-img'>
-<img src='/badge/color-brightgreen-brightgreen.svg' alt='brightgreen'/>
-<img src='/badge/color-green-green.svg' alt='green'/>
-<img src='/badge/color-yellowgreen-yellowgreen.svg' alt='yellowgreen'/>
-<img src='/badge/color-yellow-yellow.svg' alt='yellow'/>
-<img src='/badge/color-orange-orange.svg' alt='orange'/>
-<img src='/badge/color-red-red.svg' alt='red'/>
-<img src='/badge/color-lightgrey-lightgrey.svg' alt='lightgrey'/>
-<img src='/badge/color-blue-blue.svg' alt='blue'/>
-<img src='/badge/color-ff69b4-ff69b4.svg' alt='ff69b4'/>
+<img src="/badge/color-brightgreen-brightgreen.svg" alt='brightgreen'/>
+<img src="/badge/color-green-green.svg" alt='green'/>
+<img src="/badge/color-yellowgreen-yellowgreen.svg" alt='yellowgreen'/>
+<img src="/badge/color-yellow-yellow.svg" alt='yellow'/>
+<img src="/badge/color-orange-orange.svg" alt='orange'/>
+<img src="/badge/color-red-red.svg" alt='red'/>
+<img src="/badge/color-lightgrey-lightgrey.svg" alt='lightgrey'/>
+<img src="/badge/color-blue-blue.svg" alt='blue'/>
+<img src="/badge/color-ff69b4-ff69b4.svg" alt='ff69b4'/>
 </p>
 
 <h2 id="styles"> Styles </h2>
@@ -2319,23 +2319,23 @@ The following styles are available (flat is the default as of Feb 1st 2015):
 </p>
 <table class='badge-img'><tbody>
   <tr>
-  <td><img src='/badge/style-plastic-green.svg?style=plastic' alt=''/></td>
+  <td><img src="/badge/style-plastic-green.svg?style=plastic" alt=''/></td>
   <td><code>https://img.shields.io/badge/style-plastic-green.svg?style=plastic</code></td>
   </tr>
   <tr>
-  <td><img src='/badge/style-flat-green.svg?style=flat' alt=''/></td>
+  <td><img src="/badge/style-flat-green.svg?style=flat" alt=''/></td>
   <td><code>https://img.shields.io/badge/style-flat-green.svg?style=flat</code></td>
   </tr>
   <tr>
-  <td><img src='/badge/style-flat--squared-green.svg?style=flat-square' alt=''/></td>
+  <td><img src="/badge/style-flat--squared-green.svg?style=flat-square" alt=''/></td>
   <td><code>https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
   <tr>
-  <td><img src='/badge/style-for--the--badge-green.svg?style=for-the-badge' alt=''/></td>
+  <td><img src="/badge/style-for--the--badge-green.svg?style=for-the-badge" alt=''/></td>
   <td><code>https://img.shields.io/badge/style-for--the--badge-green.svg?style=for-the-badge</code></td>
   </tr>
   <tr>
-  <td><img src='/badge/style-social-green.svg?style=social' alt=''/></td>
+  <td><img src="/badge/style-social-green.svg?style=social" alt=''/></td>
   <td><code>https://img.shields.io/badge/style-social-green.svg?style=social</code></td>
   </tr>
 </tbody></table>
