Added new badge to homepage

--- a/try.html
+++ b/try.html
@@ -2089,11 +2089,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td><code>https://img.shields.io/vscode-marketplace/r/ritwickdey.LiveServer.svg</code></td>
         </tr>
         <tr>
-          <th data-keywords="eclipse marketplace">Eclipse Marketplace:</th>
+          <th data-keywords="eclipse marketplace favorites">Eclipse Marketplace favorites:</th>
           <td>
             <img src="/eclipse-marketplace/favorites/notepad4e.svg" alt="" />
           </td>
           <td><code>https://img.shields.io/eclipse-marketplace/favorites/notepad4e.svg</code></td>
+        </tr>
+        <tr>
+          <th data-keywords="eclipse marketplace update">Eclipse Marketplace last update:</th>
+          <td>
+            <img src="/eclipse-marketplace/updated/notepad4e.svg" alt="" />
+          </td>
+          <td><code>https://img.shields.io/eclipse-marketplace/updated/notepad4e.svg</code></td>
         </tr>
       </tbody>
     </table>
