--- a/try.html
+++ b/try.html
@@ -2095,6 +2095,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           </td>
           <td><code>https://img.shields.io/eclipse-marketplace/favorites/notepad4e.svg</code></td>
         </tr>
+        <tr>
+          <th data-keywords="eclipse marketplace">Eclipse Marketplace:</th>
+          <td>
+            <img src="/eclipse-marketplace/last-update/notepad4e.svg" alt="" />
+          </td>
+          <td><code>https://img.shields.io/eclipse-marketplace/last-update/notepad4e.svg</code></td>
+        </tr>
       </tbody>
     </table>
   </div>
