Add pull request state badge

--- a/try.html
+++ b/try.html
@@ -1578,6 +1578,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td><code>https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg</code></td>
         </tr>
         <tr>
+          <th data-keywords='GitHub pullrequest pr state merge mergeability' data-doc='githubDoc'> GitHub pull request state: </th>
+          <td>
+            <img src='/github/pr-state/badges/shields/6.svg' alt=''/></td>
+          <td>
+            <code>https://img.shields.io/github/pr-state/badges/shields/6.svg</code></td>
+        </tr>
+        <tr>
           <th data-doc="githubDoc" data-keywords="GitHub issue label">GitHub issues by-label:</th>
           <td>
             <img src="/github/issues/badges/shields/service-badge.svg" alt="" />
