Fix style issue with iTunes App Store on homepage

--- a/try.html
+++ b/try.html
@@ -1242,7 +1242,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td><code>https://img.shields.io/eclipse-marketplace/v/notepad4e.svg</code></td>
         </tr>
         <tr>
-          <th>Itunes App Store:</th>
+          <th>iTunes App Store:</th>
           <td>
             <img src="/itunes/v/803453959.svg" alt="" />
           </td>
