Added Funding category

--- a/try.html
+++ b/try.html
@@ -1322,7 +1322,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     </table>
   </div>
   <div>
-    <h3 id="miscellaneous">Miscellaneous</h3>
+    <h3 id="funding">Funding</h3>
     <table class="badge">
       <tbody>
         <tr>
@@ -1347,6 +1347,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
           <td><code>https://img.shields.io/beerpay/hashdog/scrapfy-chrome-extension.svg</code></td>
         </tr>
         <tr>
+          <th>Codetally:</th>
+          <td>
+            <img src="/codetally/triggerman722/colorstrap.svg" alt="" />
+          </td>
+          <td><code>https://img.shields.io/codetally/triggerman722/colorstrap.svg</code></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div>
+    <h3 id="miscellaneous">Miscellaneous</h3>
+    <table class="badge">
+      <tbody>
+        <tr>
           <th>Code Climate:</th>
           <td>
             <img src="/codeclimate/github/kabisaict/flow.svg" alt="" />
@@ -1366,13 +1380,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
             <img src="/codeclimate/issues/github/me-and/mdf.svg" alt="" />
           </td>
           <td><code>https://img.shields.io/codeclimate/issues/github/me-and/mdf.svg</code></td>
-        </tr>
-        <tr>
-          <th>Codetally:</th>
-          <td>
-            <img src="/codetally/triggerman722/colorstrap.svg" alt="" />
-          </td>
-          <td><code>https://img.shields.io/codetally/triggerman722/colorstrap.svg</code></td>
         </tr>
         <tr>
           <th>bitHound:</th>
